# Physical-AI---Humanoid-Robotics

./: .gitignore
.claude/: settings.local.json
.github/workflows/: deploy-book.yml  deploy-chatbot.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  server.py
book/: .env.example  docusaurus.config.js  package-lock.json  package.json  sidebars.js
book/docs/_templates/: chapter-template.mdx
book/docs/intro/: 01-foundations.mdx  02-digital-to-physical.mdx  03-humanoid-landscape.mdx  04-sensor-systems.mdx  _category_.json  index.mdx
book/docs/module1-ros2/: 01-architecture.mdx  02-nodes-topics.mdx  03-python-packages.mdx  04-launch-files.mdx  05-urdf.mdx  06-python-agents.mdx  _category_.json
book/docs/module2-simulation/: 01-gazebo-setup.mdx  02-urdf-sdf.mdx  03-physics.mdx  04-sensors.mdx  05-unity.mdx  06-environments.mdx  _category_.json
book/docs/module3-isaac/: 01-isaac-overview.mdx  02-synthetic-data.mdx  03-perception.mdx  04-nav2.mdx  05-rl-basics.mdx  06-sim-to-real.mdx  _category_.json
book/docs/module4-vla/: 01-foundation-models.mdx  02-vla-architectures.mdx  03-fine-tuning.mdx  04-deployment.mdx  05-advanced-topics.mdx  _category_.json
book/src/components/: RagChatbot.jsx
book/src/css/: custom.css  ragChatbot.css
book/src/pages/: index.js  index.module.css
chatbot/: .env.example  pyproject.toml
chatbot/src/: __init__.py  config.py  main.py
chatbot/src/api/: __init__.py  models.py
chatbot/src/services/: __init__.py
history/prompts/001-humanoid-robotics-book/: 001-create-book-feature-spec.spec.prompt.md  002-enhance-spec-docusaurus-structure.spec.prompt.md  003-create-implementation-plan.plan.prompt.md  004-generate-implementation-tasks.tasks.prompt.md  005-implement-phase1-phase2.green.prompt.md  006-implement-phase3-content.green.prompt.md
history/prompts/constitution/: 001-create-robotics-book-constitution.constitution.prompt.md
history/prompts/rag-chatbot-backend/: 001-create-implementation-plan.plan.prompt.md  (+3 more)
specs/001-humanoid-robotics-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/rag-chatbot-backend/: plan.md  tasks.md
(+7 files in other folders)
