[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG ingestion pipeline for Physical AI Book - Hackathon Edition"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.0.0",
    "qdrant-client>=1.7.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
]
